--- a/GarphIt.web/Pages/NodeOptions.razor
+++ b/GarphIt.web/Pages/NodeOptions.razor
@@ -36,6 +36,7 @@
                     <SfTextBox CssClass="shortInput" ValueChange="OnNodeLabelChange" Value="@ActiveNodes.ElementAt(0).Label"></SfTextBox>
                     <SfColorPicker Value="@ActiveNodes.ElementAt(0).LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
                 </div>
+                <button type="button" class="btn NavNone shadow-none" @onclick="OnRecenter">Re-Center</button>
             }
             else
             {
@@ -43,7 +44,7 @@
                     Selected:
                 </div>
                 <div class="px-1">
-                    Radius <SfNumericTextBox TValue="int?"  Min=10 Max=100 Step=1 Format="###" CssClass="shortInput" @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
+                    Radius <SfNumericTextBox TValue="int?" Min=10 Max=100 Step=1 Format="###" CssClass="shortInput" @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
                 </div>
                 <div class="px-1">
                     Color <SfColorPicker Value="@ActiveNodes.ElementAt(0).NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
