Save as SVG both screen and full

--- a/GarphIt.web/Pages/Home.razor
+++ b/GarphIt.web/Pages/Home.razor
@@ -16,7 +16,9 @@
                 Save As
             </button>
             <div class="dropdown-menu" aria-labelledby="saveas">
-                <a class="dropdown-item" @onclick="SaveSVGFile">SVG</a>
+                <a class="dropdown-item" @onclick="() => SaveSVGFile(true)">screen view SVG</a>
+                <a class="dropdown-item" @onclick="() => SaveSVGFile(false)">full view SVG</a>
+                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" @onclick="SaveGraphItFile">Graph File</a>
             </div>
         </div>
