--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -15,7 +15,7 @@
     switch (Choice)
     {
         case NavChoice.Home:
-            <Home @bind-Rep="Rep" DefaultOptions="DefaultOptions"></Home>
+            <Home @bind-Rep="Rep" DefaultOptions="DefaultOptions" SVGControl="SVGControl"></Home>
             break;
         case NavChoice.Insert:
             <Insert @bind-GraphMode="GraphMode" DefaultOptions="DefaultOptions"></Insert>
