--- a/GarphIt.web/Pages/Footer.razor
+++ b/GarphIt.web/Pages/Footer.razor
@@ -1,10 +1,10 @@
 ﻿@inherits FooterBase
 <div class="footer d-flex flex-row py-0 my-0 align-items-center">
     <span class="px-2">
-        Nodes: @NodeCount
+        Nodes: @Nodes.Count
     </span>
     <span class="px-2">
-        Edges: @EdgeCount
+        Edges: @Edges.Count
     </span>
     <span class="px-2">
         Mode: @GraphMode
