--- a/GarphIt.web/Pages/NodeOptions.razor
+++ b/GarphIt.web/Pages/NodeOptions.razor
@@ -25,16 +25,16 @@
                     Selected:
                 </div>
                 <div class="px-1">
-                    Radius <SfNumericTextBox TValue="int?" Value="@ActiveNodes.ElementAt(0).Radius" Min=10 Max=100 Step=1 Format="###" CssClass="shortInput"
+                    Radius <SfNumericTextBox TValue="int?" Value="@ActiveNodes[0].Radius" Min=10 Max=100 Step=1 Format="###" CssClass="shortInput"
                                              @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
                 </div>
                 <div class="px-1">
-                    Color <SfColorPicker Value="@ActiveNodes.ElementAt(0).NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
+                    Color <SfColorPicker Value="@ActiveNodes[0].NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
                 </div>
                 <div class="px-1">
                     Label
                     <SfTextBox CssClass="shortInput" ValueChange="OnNodeLabelChange" Value="@ActiveNodes.ElementAt(0).Label"></SfTextBox>
-                    <SfColorPicker Value="@ActiveNodes.ElementAt(0).LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
+                    <SfColorPicker Value="@ActiveNodes[0].LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
                 </div>
                 <button type="button" class="btn NavNone shadow-none" @onclick="OnRecenter">Re-Center</button>
             }
@@ -47,12 +47,12 @@
                     Radius <SfNumericTextBox TValue="int?" Min=10 Max=100 Step=1 Format="###" CssClass="shortInput" @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
                 </div>
                 <div class="px-1">
-                    Color <SfColorPicker Value="@ActiveNodes.ElementAt(0).NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
+                    Color <SfColorPicker Value="@ActiveNodes[0].NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
                 </div>
                 <div class="px-1">
                     Label
                     <SfTextBox CssClass="shortInput" ValueChange="OnNodeLabelChange"></SfTextBox>
-                    <SfColorPicker Value="@ActiveNodes.ElementAt(0).LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
+                    <SfColorPicker Value="@ActiveNodes[0].LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
                 </div>
             }
             <button type="button" class="btn NavNone shadow-none" @onclick="OnRelabel">Re-label</button>
