--- a/GarphIt.web/Pages/Home.razor
+++ b/GarphIt.web/Pages/Home.razor
@@ -11,5 +11,32 @@
                 <a class="dropdown-item" @onclick="OnWeightMatrixClick">Weighted Matrix</a>
             </div>
         </div>
+        <div class="dropdown px-1">
+            <button class="btn shadow-none NavNone dropdown-toggle" type="button" id="repre" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Algorithms
+            </button>
+            <div class="dropdown-menu" aria-labelledby="repre">
+                <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.BFS)">BFS</a>
+                <a class="dropdown-item" @onclick="() => OnAlgoChanged(Algorithm.DFS)">DFS</a>
+            </div>
+        </div>
+        @if (StartAlgorithm.Algorithm != Algorithm.None)
+        {
+            @if (StartAlgorithm.StartNode == null)
+            {
+                <p>Choose Start Node</p>
+            }
+            else if (RequiresEnd.Contains(StartAlgorithm.Algorithm) && StartAlgorithm.EndNode == null)
+            {
+                <p>Choose End Node</p>
+            }
+            else
+            {
+                <button class="btn"><span class="oi oi-x"></span></button>
+                <button class="btn"><span class="oi oi-media-stop"></span></button>
+                <button class="btn"><span class="oi oi-media-skip-forward"></span></button>
+                <button class="btn"><span class="oi oi-media-step-forward"></span></button>
+            }
+        }
     </div>
 </nav>
