--- a/GarphIt.web/Pages/NavBar.razor
+++ b/GarphIt.web/Pages/NavBar.razor
@@ -8,25 +8,25 @@
     <div class="collapse navbar-collapse mx-0" id="navbarNav">
         <ul class="navbar-nav mx-0">
             <li class="nav-item @NavElements[(int)NavChoice.File]" @onclick="(() => Click(NavChoice.File))">
-                <button type="button" class="btn shadow-none">File</button>
+                <button type="button" class="btn shadow-none oi oi-file">File</button>
             </li>
             <li class="nav-item @NavElements[(int)NavChoice.Home]" @onclick="(() => Click(NavChoice.Home))">
-                <button type="button" class="btn shadow-none">Home</button>
+                <button type="button" class="btn shadow-none oi oi-home">Home</button>
             </li>
             <li class="nav-item @NavElements[(int)NavChoice.Insert]" @onclick="(() => Click(NavChoice.Insert))">
-                <button type="button" class="btn shadow-none">Insert</button>
+                <button type="button" class="btn shadow-none oi oi-plus">Insert</button>
             </li>
             <li class="nav-item @NavElements[(int)NavChoice.View]" @onclick="(() => Click(NavChoice.View))">
-                <button type="button" class="btn shadow-none">View</button>
+                <button type="button" class="btn shadow-none oi oi-magnifying-glass">View</button>
             </li>
             <li class="nav-item @NavElements[(int)NavChoice.Node]" @onclick="(() => Click(NavChoice.Node))">
-                <button type="button" class="btn shadow-none">Node</button>
+                <button type="button" class="btn shadow-none oi oi-media-record">Node</button>
             </li>
             <li class="nav-item @NavElements[(int)NavChoice.Edge]" @onclick="(() => Click(NavChoice.Edge))">
-                <button type="button" class="btn shadow-none">Edge</button>
+                <button type="button" class="btn shadow-none oi oi-transfer">Edge</button>
             </li>
             <li class="nav-item @NavElements[(int)NavChoice.About]" @onclick="(() => Click(NavChoice.About))">
-                <button type="button" class="btn shadow-none">About</button>
+                <button type="button" class="btn shadow-none oi oi-info"></button>
             </li>
         </ul>
     </div>
