--- a/GarphIt.web/Pages/File.razor
+++ b/GarphIt.web/Pages/File.razor
@@ -3,8 +3,8 @@
 <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
     <div class="d-flex">
         <div class="dropdown px-1">
-            <button class="btn shadow-none NavNone dropdown-toggle" type="button" id="saveas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Save As
+            <button class="btn shadow-none NavNone dropdown-toggle oi oi-share-boxed" type="button" id="saveas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Export As
             </button>
             <div class="dropdown-menu" aria-labelledby="saveas">
                 <a class="dropdown-item" @onclick="() => SaveSVGFile(true)">screen view SVG</a>
@@ -14,10 +14,10 @@
             </div>
         </div>
         <div class="px-1">
-            <button class="btn NavNone shadow-non" @onclick="(() => OpenPreference = true)">Open</button>
+            <button class="btn NavNone shadow-none oi oi-envelope-open" @onclick="(() => OpenPreference = true)">Open</button>
         </div>
         <div class="px-1">
-            <button class="btn NavNone shadow-non" @onclick="(() => NewGraphCheck = true)">New</button>
+            <button class="btn NavNone shadow-none oi oi-reload" @onclick="(() => NewGraphCheck = true)">New</button>
         </div>
     </div>
 </nav>
