--- a/GarphIt.web/Pages/Insert.razor
+++ b/GarphIt.web/Pages/Insert.razor
@@ -1,13 +1,32 @@
 ﻿@inherits InsertBase
 
+@if (InsertNode)
+{
+    NodeCss = "NavActive";
+}
+else
+{
+    NodeCss = "NavNone";
+}
+@if (InsertEdge)
+{
+    EdgeCss = "NavActive";
+}
+else
+{
+    EdgeCss = "NavNone";
+}
 <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
     <div class="d-inline-flex">
-        <div class="px-1">
-            <SfCheckBox TChecked="bool" Label="Nodes" @onclick="UpdateInsertNode" Checked="InsertNode">Nodes</SfCheckBox>
+        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+            <label class="btn @NodeCss shadow-none" @onclick="UpdateInsertNode">
+                <input type="checkbox" autocomplete="off"> @("Node")
+            </label>
+            <label class="btn @EdgeCss shadow-none" @onclick="UpdateInsertEdge">
+                <input type="checkbox" autocomplete="off"> @("Edge")
+            </label>
         </div>
-        <div class="px-1">
-            <SfCheckBox TChecked="bool" Label="Edges" @onclick="UpdateInsertEdge" Checked="InsertEdge">Edges</SfCheckBox>
-        </div>
+
         <div class="dropdown px-1">
             <button class="btn shadow-none NavNone dropdown-toggle" type="button" id="saveas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Common Graphs
